--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.45.1",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "next": "14.2.3",
@@ -19,6 +20,7 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.43.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
