--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.45.1",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
+    "cookies-next": "^4.2.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
